--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 {% load static %}
+{% url 'home' as home_url %}
 <html lang="en" class="h-100">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CodeStar Blog</title>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -25,22 +29,37 @@
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" role="navigation" aria-label="Main Navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white" aria-label="Main Navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'blog_list' %}">
-                <span class="brand">c<span class="red-o">o</span>de<span class="thin">|star</span></span>
+
+            <!-- Brand -->
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <span class="brand">
+                    c<span class="red-o">o</span>de<span class="thin">|star</span>
+                </span>
             </a>
+
+            <!-- Mobile Toggle -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page"
-                           href="{% url 'blog_list' %}">Home</a>
+
+                        <!-- Active link based on URL -->
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}"
+                           aria-current="page"
+                           href="{% url 'home' %}">
+                           Home
+                        </a>
+
                     </li>
                 </ul>
+
                 <span class="navbar-text text-muted">
                     adventures of a software developer
                 </span>
@@ -50,7 +69,8 @@
 
     <!-- Main Content -->
     <main class="flex-shrink-0 main-bg" role="main">
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </main>
 
     <!-- Footer -->
@@ -60,18 +80,21 @@
                 Made by Code Instituters
             {% endblock %}
         </p>
+
         <p class="m-0 text-center text-white">
             Follow us:
-            <i class="fab fa-facebook-square ms-3" aria-hidden="true"></i>
-            <i class="fab fa-twitter-square ms-3" aria-hidden="true"></i>
-            <i class="fab fa-instagram-square ms-3" aria-hidden="true"></i>
-            <i class="fab fa-youtube-square ms-3" aria-hidden="true"></i>
+            <i class="fab fa-facebook-square ms-3"></i>
+            <i class="fab fa-twitter-square ms-3"></i>
+            <i class="fab fa-instagram-square ms-3"></i>
+            <i class="fab fa-youtube-square ms-3"></i>
         </p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous">
     </script>
+
 </body>
 </html>
