--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,42 +6,66 @@
 
 <div class="container-fluid mt-3">
     <div class="row">
-        <!-- Blog Entries Column -->
-        <div class="col-12 left">
-            <div class="row">
-                {% for post in post_list %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
-                                </div>
-                            </div>
-                            <!-- Link to post detail page -->
-                            <a href="{% url 'post-detail' post.pk %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                                <p class="card-text">{{ post.excerpt }}</p>
-                            </a>
-                            <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on }}</p>
-                        </div>
+        {% for post in post_list %}
+        <div class="col-md-4 col-sm-6 mb-4">
+            <div class="card h-100">
+                <div class="image-container">
+                    <div class="image-flash">
+                        <p class="author">Author: {{ post.author }}</p>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
+                <div class="card-body d-flex flex-column">
+                    <!-- Link to post detail page -->
+                    <a href="{% url 'post-detail' post.pk %}" class="post-link">
+                        <h2 class="card-title">{{ post.title }}</h2>
+                        <p class="card-text">{{ post.excerpt }}</p>
+                    </a>
+                    <hr />
+                    <p class="card-text text-muted mt-auto">{{ post.created_on|date:"F j, Y" }}</p>
+                </div>
             </div>
         </div>
+        {% empty %}
+        <div class="col-12">
+            <p>No posts available.</p>
+        </div>
+        {% endfor %}
     </div>
 
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo; PREV</span>
+                </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">&laquo; PREV</span>
+            </li>
+            {% endif %}
+
+            {# Page numbers dynamically #}
+            {% for num in paginator.page_range %}
+                {% if num == page_obj.number %}
+                    <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                {% endif %}
+            {% endfor %}
+
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a></li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">NEXT &raquo;</span>
+                </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">NEXT &raquo;</span>
+            </li>
             {% endif %}
         </ul>
     </nav>
@@ -50,5 +74,5 @@
 {% endblock %}
 
 {% block copyright %}
-    Copyright 2023 Your Name
+    &copy; 2023 Your Name
 {% endblock %}
