--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!-- Test background to check CSS loading -->
 <div style="height:5px; background-color:hotpink;"></div>
 
 <div class="container-fluid mt-3">
@@ -9,19 +8,23 @@
         {% for post in post_list %}
         <div class="col-md-4 col-sm-6 mb-4">
             <div class="card h-100">
+
                 <div class="image-container">
                     <div class="image-flash">
                         <p class="author">Author: {{ post.author }}</p>
                     </div>
                 </div>
+
                 <div class="card-body d-flex flex-column">
-                    <!-- Link to post detail page -->
-                    <a href="{% url 'post-detail' post.pk %}" class="post-link">
+                    <a href="{% url 'post_detail' post.slug %}" class="post-link">
                         <h2 class="card-title">{{ post.title }}</h2>
                         <p class="card-text">{{ post.excerpt }}</p>
                     </a>
+
                     <hr />
-                    <p class="card-text text-muted mt-auto">{{ post.created_on|date:"F j, Y" }}</p>
+                    <p class="card-text text-muted mt-auto">
+                        {{ post.created_on|date:"F j, Y" }}
+                    </p>
                 </div>
             </div>
         </div>
@@ -35,44 +38,49 @@
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
+
+            {# Previous button #}
             {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo; PREV</span>
-                </a>
-            </li>
+                <li class="page-item">
+                    <a class="page-link"
+                       href="?page={{ page_obj.previous_page_number }}">
+                        &laquo; PREV
+                    </a>
+                </li>
             {% else %}
-            <li class="page-item disabled">
-                <span class="page-link">&laquo; PREV</span>
-            </li>
+                <li class="page-item disabled">
+                    <span class="page-link">&laquo; PREV</span>
+                </li>
             {% endif %}
 
-            {# Page numbers dynamically #}
+            {# Page numbers #}
             {% for num in paginator.page_range %}
                 {% if num == page_obj.number %}
-                    <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+                    <li class="page-item active">
+                        <span class="page-link">{{ num }}</span>
+                    </li>
                 {% else %}
-                    <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
                 {% endif %}
             {% endfor %}
 
+            {# Next button #}
             {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                    <span aria-hidden="true">NEXT &raquo;</span>
-                </a>
-            </li>
+                <li class="page-item">
+                    <a class="page-link"
+                       href="?page={{ page_obj.next_page_number }}">
+                        NEXT &raquo;
+                    </a>
+                </li>
             {% else %}
-            <li class="page-item disabled">
-                <span class="page-link">NEXT &raquo;</span>
-            </li>
+                <li class="page-item disabled">
+                    <span class="page-link">NEXT &raquo;</span>
+                </li>
             {% endif %}
         </ul>
     </nav>
     {% endif %}
 </div>
-{% endblock %}
-
-{% block copyright %}
-    &copy; 2023 Your Name
 {% endblock %}
