--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,8 +4,6 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-
-            <!-- Post Card -->
             <div class="card mb-4">
                 <div class="card-body">
 
@@ -14,34 +12,27 @@
                         <img src="{% static 'images/default.jpg' %}" class="img-fluid" alt="{{ post.title }}">
                     </div>
 
-                    <!-- Author Badge -->
-                    <div class="image-flash mb-3">
-                        <p class="author">Author: {{ post.author }}</p>
-                    </div>
+                    <!-- Author -->
+                    <p class="author mb-3">Author: {{ post.author }}</p>
 
                     <!-- Post Title -->
                     <h1 class="card-title">{{ post.title }}</h1>
 
                     <!-- Post Metadata -->
-                    <p class="text-muted">
-                        Published on {{ post.created_on|date:"F j, Y" }}
-                    </p>
-
+                    <p class="text-muted">Published on {{ post.created_on|date:"F j, Y" }}</p>
                     <hr />
+
+                    <!-- Example: Using additional context variable -->
+                    <h2>{{ coder }}</h2>
 
                     <!-- Post Content -->
-                    <div class="post-content">
-                        {{ post.content|safe }}
-                    </div>
-
+                    <p class="card-text">{{ post.content|safe }}</p>
                     <hr />
 
-                    <!-- Back to Blog Link -->
+                    <!-- Back to Blog List -->
                     <a href="{% url 'blog_list' %}" class="btn btn-signup mt-3">← Back to Blog</a>
-
                 </div>
             </div>
-
         </div>
     </div>
 </div>
