--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
 {% load static %}
 {% url 'home' as home_url %}
 {% url 'blog_list' as blog_url %}
+{% url 'about' as about_url %}  <!-- Add this line -->
+
+<!DOCTYPE html>
 <html lang="en" class="h-100">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CodeStar Blog</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-          crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    ...
 </head>
-
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
@@ -65,6 +47,14 @@
                         </a>
                     </li>
 
+                    <!-- ABOUT LINK -->
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == about_url %}active{% endif %}"
+                           href="{% url 'about' %}">
+                           About
+                        </a>
+                    </li>
+
                 </ul>
 
                 <span class="navbar-text text-muted">
@@ -81,25 +71,6 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg" role="contentinfo">
-        <p class="m-0 text-center text-white">
-            {% block copyright %}
-                Made by Code Instituters
-            {% endblock %}
-        </p>
-
-        <p class="m-0 text-center text-white">
-            Follow us:
-            <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
-        </p>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            crossorigin="anonymous"></script>
-
+    ...
 </body>
 </html>
