--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,38 +1,132 @@
 {% extends "base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-8">
+
+            <!-- Post Card -->
             <div class="card mb-4">
                 <div class="card-body">
 
                     <!-- Default Image -->
                     <div class="image-container mb-3">
-                        <img src="{% static 'images/default.jpg' %}" class="img-fluid" alt="{{ post.title }}">
+                        <img src="{% static 'images/default.jpg' %}"
+                             class="img-fluid"
+                             alt="{{ post.title }}">
                     </div>
 
                     <!-- Author -->
-                    <p class="author mb-3">Author: {{ post.author }}</p>
+                    <p class="author mb-3">
+                        Author: {{ post.author }}
+                    </p>
 
                     <!-- Post Title -->
-                    <h1 class="card-title">{{ post.title }}</h1>
+                    <h1 class="card-title">
+                        {{ post.title }}
+                    </h1>
 
                     <!-- Post Metadata -->
-                    <p class="text-muted">Published on {{ post.created_on|date:"F j, Y" }}</p>
-                    <hr />
+                    <p class="text-muted">
+                        Published on {{ post.created_on|date:"F j, Y" }}
+                    </p>
 
-                    <!-- Example: Using additional context variable -->
-                    <h2>{{ coder }}</h2>
+                    <hr>
 
                     <!-- Post Content -->
-                    <p class="card-text">{{ post.content|safe }}</p>
-                    <hr />
+                    <p class="card-text">
+                        {{ post.content|safe }}
+                    </p>
+
+                    <hr>
+
+                    <!-- Comment Count -->
+                    <div class="row">
+                        <div class="col-12">
+                            <strong class="text-secondary">
+                                <i class="far fa-comments"></i>
+                                {{ comment_count }}
+                            </strong>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <!-- Displaying Comments -->
+                    <div class="card mb-4 mt-3">
+                        <div class="card-body">
+                            <h3>Comments:</h3>
+
+                            {% for comment in comments %}
+                            <div class="p-2 comments
+                                {% if not comment.approved and comment.author == user %}
+                                    faded
+                                {% elif not comment.approved %}
+                                    d-none
+                                {% endif %}">
+
+                                <p class="font-weight-bold">
+                                    {{ comment.author }}
+                                    <span class="font-weight-normal">
+                                        {{ comment.created_on|date:"F j, Y, g:i a" }}
+                                    </span> wrote:
+                                </p>
+
+                                <div id="comment{{ comment.id }}">
+                                    {{ comment.body|linebreaks }}
+                                </div>
+
+                                {% if not comment.approved and comment.author == user %}
+                                <p class="approval">
+                                    This comment is awaiting approval
+                                </p>
+                                {% endif %}
+                            </div>
+                            {% empty %}
+                            <p>No comments yet.</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+
+                    <!-- Creating New Comments -->
+                    <div class="card mb-4 mt-3">
+                        <div class="card-body">
+
+                            {% if user.is_authenticated %}
+                            <h3>Leave a comment:</h3>
+                            <p>Posting as: {{ user.username }}</p>
+
+                            <form method="post" action="" style="margin-top: 1.3em;">
+                                {% csrf_token %}
+                                {{ comment_form|crispy }}
+                                <button type="submit"
+                                        class="btn btn-signup btn-lg">
+                                    Submit
+                                </button>
+                            </form>
+
+                            {% else %}
+                            <p>
+                                <a href="{% url 'account_login' %}">
+                                    Log in
+                                </a> to leave a comment.
+                            </p>
+                            {% endif %}
+
+                        </div>
+                    </div>
 
                     <!-- Back to Blog List -->
-                    <a href="{% url 'blog_list' %}" class="btn btn-signup mt-3">← Back to Blog</a>
+                    <a href="{% url 'blog_list' %}"
+                       class="btn btn-signup mt-3">
+                        ← Back to Blog
+                    </a>
+
                 </div>
             </div>
+
         </div>
     </div>
 </div>
