--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,20 +1,50 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-4 text-center">
-      <img src="{% static 'images/nobody.jpg' %}" width="75%" />
+
+    <!-- About content -->
+    <div class="row">
+        <div class="col-12 col-md-4 text-center">
+            <img src="{% static 'images/nobody.jpg' %}" width="75%" alt="About image">
+        </div>
+        <div class="col-12 col-md-8">
+            <h2>{{ about.title }}</h2>
+            {{ about.content | safe }}
+        </div>
     </div>
-    <div class="col-8">
-      <h2>{{ about.title }}</h2>
-      {{ about.content | safe }}
+
+    <!-- Updated on -->
+    <div class="row">
+        <div class="col text-end">
+            <p><em>Updated on: {{ about.updated_on }}</em></p>
+        </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col text-end">
-      <p><em>Updated on: {{ about.updated_on }}</em></p>
+
+    <!-- Collaborate section -->
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 my-5">
+            <h2>Let's collaborate!</h2>
+            <p>
+                I believe in the power of shared knowledge and collective effort.
+                Whether you have a project in mind, wish to co-author an article,
+                or simply want to brainstorm some ideas,
+                I'm excited to hear from you. Fill out the form
+                and we can get the ball rolling!
+            </p>
+
+            <form method="post">
+                {% csrf_token %}
+                {{ collaborate_form|crispy }}
+                <button type="submit" class="btn btn-secondary">
+                    Submit
+                </button>
+            </form>
+
+        </div>
     </div>
-  </div>
+
 </div>
-{% endblock %}
+{% endblock content %}
