--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,130 +4,109 @@
 
 {% block content %}
 <div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
 
-            <!-- Post Card -->
-            <div class="card mb-4">
-                <div class="card-body">
+      <!-- Post Card -->
+      <div class="card mb-4">
+        <div class="card-body">
 
-                    <!-- Default Image -->
-                    <div class="image-container mb-3">
-                        <img src="{% static 'images/default.jpg' %}"
-                             class="img-fluid"
-                             alt="{{ post.title }}">
-                    </div>
+          <!-- Post Image -->
+          <div class="image-container mb-3">
+            <img src="{% static 'images/default.jpg' %}" class="img-fluid" alt="{{ post.title }}">
+          </div>
 
-                    <!-- Author -->
-                    <p class="author mb-3">
-                        Author: {{ post.author }}
-                    </p>
+          <!-- Post Author -->
+          <p class="author mb-3">Author: {{ post.author }}</p>
 
-                    <!-- Post Title -->
-                    <h1 class="card-title">
-                        {{ post.title }}
-                    </h1>
+          <!-- Post Title -->
+          <h1 class="card-title">{{ post.title }}</h1>
 
-                    <!-- Post Metadata -->
-                    <p class="text-muted">
-                        Published on {{ post.created_on|date:"F j, Y" }}
-                    </p>
+          <!-- Post Metadata -->
+          <p class="text-muted">Published on {{ post.created_on|date:"F j, Y" }}</p>
+          <hr>
 
-                    <hr>
+          <!-- Post Content -->
+          <div class="card-text">{{ post.content|safe }}</div>
+          <hr>
 
-                    <!-- Post Content -->
-                    <p class="card-text">
-                        {{ post.content|safe }}
-                    </p>
-
-                    <hr>
-
-                    <!-- Comment Count -->
-                    <div class="row">
-                        <div class="col-12">
-                            <strong class="text-secondary">
-                                <i class="far fa-comments"></i>
-                                {{ comment_count }}
-                            </strong>
-                        </div>
-                    </div>
-
-                    <hr>
-
-                    <!-- Displaying Comments -->
-                    <div class="card mb-4 mt-3">
-                        <div class="card-body">
-                            <h3>Comments:</h3>
-
-                            {% for comment in comments %}
-                            <div class="p-2 comments
-                                {% if not comment.approved and comment.author == user %}
-                                    faded
-                                {% elif not comment.approved %}
-                                    d-none
-                                {% endif %}">
-
-                                <p class="font-weight-bold">
-                                    {{ comment.author }}
-                                    <span class="font-weight-normal">
-                                        {{ comment.created_on|date:"F j, Y, g:i a" }}
-                                    </span> wrote:
-                                </p>
-
-                                <div id="comment{{ comment.id }}">
-                                    {{ comment.body|linebreaks }}
-                                </div>
-
-                                {% if not comment.approved and comment.author == user %}
-                                <p class="approval">
-                                    This comment is awaiting approval
-                                </p>
-                                {% endif %}
-                            </div>
-                            {% empty %}
-                            <p>No comments yet.</p>
-                            {% endfor %}
-                        </div>
-                    </div>
-
-                    <!-- Creating New Comments -->
-                    <div class="card mb-4 mt-3">
-                        <div class="card-body">
-
-                            {% if user.is_authenticated %}
-                            <h3>Leave a comment:</h3>
-                            <p>Posting as: {{ user.username }}</p>
-
-                            <form method="post" action="" style="margin-top: 1.3em;">
-                                {% csrf_token %}
-                                {{ comment_form|crispy }}
-                                <button type="submit"
-                                        class="btn btn-signup btn-lg">
-                                    Submit
-                                </button>
-                            </form>
-
-                            {% else %}
-                            <p>
-                                <a href="{% url 'account_login' %}">
-                                    Log in
-                                </a> to leave a comment.
-                            </p>
-                            {% endif %}
-
-                        </div>
-                    </div>
-
-                    <!-- Back to Blog List -->
-                    <a href="{% url 'blog_list' %}"
-                       class="btn btn-signup mt-3">
-                        ← Back to Blog
-                    </a>
-
-                </div>
+          <!-- Comment Count -->
+          <div class="row">
+            <div class="col-12">
+              <strong class="text-secondary">
+                <i class="far fa-comments"></i> {{ comment_count }}
+              </strong>
             </div>
+          </div>
+          <hr>
+
+          <!-- Comments Section -->
+          <div class="card mb-4 mt-3">
+            <div class="card-body">
+              <h3>Comments:</h3>
+
+              {% for comment in comments %}
+              <div class="p-2 comment
+                  {% if not comment.approved and comment.author == user %} faded
+                  {% elif not comment.approved %} d-none
+                  {% endif %}">
+
+                <p class="font-weight-bold">
+                  {{ comment.author }}
+                  <span class="font-weight-normal">{{ comment.created_on|date:"F j, Y, g:i a" }}</span> wrote:
+                </p>
+
+                <div id="comment{{ comment.id }}">
+                  {{ comment.body|linebreaks }}
+                </div>
+
+                {% if not comment.approved and comment.author == user %}
+                  <p class="text-warning">This comment is awaiting approval</p>
+                {% endif %}
+
+                {% if user.is_authenticated and comment.author == user %}
+                  <!-- Edit Button with comment_id attribute -->
+                  <button type="button" class="btn btn-edit btn-sm" comment_id="{{ comment.id }}">
+                    Edit
+                  </button>
+
+                  <!-- Delete Button with comment_id attribute -->
+                  <button type="button" class="btn btn-delete btn-sm" comment_id="{{ comment.id }}">
+                    Delete
+                  </button>
+                {% endif %}
+              </div>
+              {% empty %}
+                <p>No comments yet.</p>
+              {% endfor %}
+            </div>
+          </div>
+
+          <!-- New Comment Form -->
+          <div class="card mb-4 mt-3">
+            <div class="card-body">
+              {% if user.is_authenticated %}
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" id="commentForm" action="{% url 'post_detail' slug=post.slug %}">
+                  {% csrf_token %}
+                  {{ comment_form|crispy }}
+                  <button type="submit" class="btn btn-signup btn-lg mt-2">Submit</button>
+                </form>
+              {% else %}
+                <p><a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
+              {% endif %}
+            </div>
+          </div>
+
+          <!-- Back Button -->
+          <a href="{% url 'blog_list' %}" class="btn btn-signup mt-3">← Back to Blog</a>
 
         </div>
+      </div>
+
     </div>
+  </div>
 </div>
-{% endblock %}
+{% endblock content %}
+
