Fix Back to Blog link to blog_home

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -100,7 +100,8 @@
           </div>
 
           <!-- Back Button -->
-          <a href="{% url 'blog_list' %}" class="btn btn-signup mt-3">← Back to Blog</a>
+         <a href="{% url 'blog_home' %}" class="btn btn-signup mt-3">… Back to Blog</a>
+
 
         </div>
       </div>
